# saturn

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  index.html  logging.ini  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  scrapy.cfg  scrapyd.conf  scrapydweb_settings_v10.py  tsconfig.app.json  vite.config.mts
.devcontainer/: devcontainer.json
docs/assets/css/: custom.css
docs/chapters/: scrapy.md
docs/overrides/partials/: nav-item.html
scripts/: build.py
src/components/: HelloWorld.vue
src/plugins/: vuetify.ts
src/ring/: main.ts
src/ring/components/: FooterPanel.vue  LoaderWrapper.vue
src/ring/components/header/: Header.vue  NotificationDD.vue  ProfileDD.vue
src/ring/components/sidebar/: ExtraBox.vue  NavCollapse.vue  NavGroup.vue  NavItem.vue  Sidebar.vue
src/ring/layouts/: default.vue
src/ring/pages/: dashboard.vue  login.vue
src/ring/plugins/: index.ts  vuetify.ts
src/ring/router/: index.ts
src/ring/scss/: _override.scss  _variables.scss  style.scss
src/ring/scss/components/: _VAlert.scss  _VBadge.scss  _VBreadcrumb.scss  _VButtons.scss  _VCard.scss  _VField.scss  _VInput.scss  _VList.scss  _VNavigationDrawer.scss  _VShadow.scss  _VTextField.scss  _VTextarea.scss
src/ring/scss/layout/: _container.scss  _footer.scss  _sidebar.scss  _topbar.scss
src/ring/scss/page/: _dashboards.scss
src/ring/stores/: app.ts  auth.ts
src/router/: index.ts
src/saturn/: __init__.py  __main__.py
src/saturn/cli/: Root.py  Start.py  Stop.py
src/saturn/configs/: AppEnum.py  ProjectConfig.py  ScrapyConfig.py  __init__.py
src/saturn/core/data/: Request.py  RequestFactory.py  Response.py
src/saturn/core/decisions/: DecisionEngine.py  DecisionNode.py  SimpleDecisionEngine.py  __init__.py
src/saturn/core/decisions/nodes/: ListPageDecisionNode.py  NextPageDecisionNode.py  PagingDecisionNode.py  SavePageDecisionNode.py
src/saturn/core/queues/: PriorityQueue.py  Queue.py  QueueClient.py  QueuePersistentSync.py  RedisQueuePersistentSync.py
src/saturn/core/rfp/: RFPPersistentSync.py  RedisRfpPersistentSync.py  RfpPersistentSync.py
src/saturn/db/: __init__.py
src/saturn/decisions/: SimpleDecisionEngine.py
src/saturn/frameworks/scrapy/: ScrapyPriorityQueue.py  ScrapyRFPDupeFilter.py  ScrapyRequest.py  ScrapyRequestFactory.py  ScrapyResponse.py  ScrapyRfpDupeFilter.py  ScrapyScheduler.py  ScrapySettings.py  ScrapySpider.py  ScrapySpiders.py  __main__.py
src/saturn/models/dto/decisions/: Context.py  (+5 more)
src/saturn/models/po/: BaseTable.py  MetaInfo.py  TaskInfo.py
src/saturn/tasks/: quote.py
src/saturn/utils/: ClassUtil.py  EncryptUtil.py  ProcessUtil.py
src/saturn/web/: asgi.py  settings.py  urls.py  wsgi.py
src/saturn/web/api/: apps.py  models.py  serializers.py  urls.py  views.py
src/saturn/web/scheduler/: apps.py  urls.py  views.py
src/stores/: app.ts  auth.ts
src/utils/: requests.ts
tests/: conftest.py  test_cli.py  test_configs.py  test_decisions.py  test_saturn.py  test_utils.py
tests/decisions/: test_engine.py
(+4 files in other folders)
