[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "saturn"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.12"
description = "The powerful crawler application."
authors = [
  { name = "zlhywlf", email = "tommietanghao@zlhywlf.onmicrosoft.com" },
]
classifiers = [
  "Framework :: AsyncIO",
  "Framework :: Pydantic",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "cryptography~=44.0.0",
  "django~=5.1.0",
  "djangorestframework~=3.15.0",
  "djangorestframework-simplejwt~=5.3.0",
  "psutil~=6.1.0",
  "pydantic~=2.10.0",
  "pydantic-settings~=2.6.0",
  "redis~=5.2.0",
  "scrapy~=2.12.0",
  "sqlalchemy~=2.0.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite~=0.20.0",
  "build==1.2.2.post1",
  "django-stubs~=5.1.0",
  "djangorestframework-stubs~=3.15.0",
  "faker~=33.1.0",
  "fakeredis~=2.26.0",
  "mkdocs~=1.6.0",
  "mkdocs-material~=9.5.0",
  "mypy~=1.13.0",
  "pre-commit~=4.0.0",
  "pytest~=8.3.0",
  "pytest-asyncio~=0.25.0",
  "pytest-cov~=6.0.0",
  "pytest-env~=1.1.0",
  "pytest-mock~=3.14.0",
  "pytest-xdist~=3.6.0",
  "ruff~=0.8.0",
  "types-psutil==6.1.0.20241102",
]

[project.urls]
"Homepage" = ""

[project.scripts]
saturn = "saturn.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/saturn"]
artifacts = ["src/saturn/web/templates"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/saturn/_version.py"
template = """
# file generated by setuptools_scm
# don't change, don't track in version control

version = {version!r}
version_tuple = {version_tuple!r}
"""

[tool.hatch.build.hooks.custom]
path = "scripts/build.py"

[tool.ruff]
line-length = 120
fix = true
preview = true
exclude = ["src/saturn/_version.py", "scripts/*"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = [
  "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C4", "COM", "D", "DTZ", "E", "EM", "ERA", "F", "FBT", "I", "ICN",
  "ISC", "N", "PIE", "PT", "PTH", "PYI", "Q", "RET", "RSE", "RUF", "S", "SIM", "SLOT", "T20", "TD", "UP", "W",
]
ignore = ["COM812", "D100", "D203", "D213", "ISC001", "RUF029"]

[tool.ruff.lint.extend-per-file-ignores]
"test_*.py" = ["S101"]
"__init__.py" = ["D104"]
"src/saturn/*" = ["N999"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pytest_env]
SATURN_PROJECT_DEBUG = true

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src/saturn", "tests"]

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
]
omit = [
  "src/saturn/_version.py",
  "tests/*",
]
